[gd_scene load_steps=10 format=2]

[ext_resource path="res://BMCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/border.png" type="Texture" id=2]
[ext_resource path="res://Resources/divider.png" type="Texture" id=3]
[ext_resource path="res://Game_Client.gd" type="Script" id=4]
[ext_resource path="res://Resources/blue_board.png" type="Texture" id=6]
[ext_resource path="res://Resources/gray_background.jpg" type="Texture" id=7]
[ext_resource path="res://Resources/red_obj.png" type="Texture" id=9]
[ext_resource path="res://Resources/green_obj.png" type="Texture" id=10]
[ext_resource path="res://Resources/blue_obj.png" type="Texture" id=11]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="player" type="Node2D" parent="."]

[node name="blue_board" type="Sprite" parent="player"]
position = Vector2( 553, 707 )
scale = Vector2( 0.117425, 0.190853 )
z_as_relative = false
texture = ExtResource( 6 )

[node name="divider" type="Sprite" parent="player/blue_board"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 40.7183, -20.8728 )
scale = Vector2( 5.19175, 3.13023 )
texture = ExtResource( 3 )

[node name="hero_left_spot" type="Sprite" parent="player/blue_board"]
position = Vector2( -1390.78, -554.108 )
rotation = 1.5708
scale = Vector2( 0.391278, 0.648969 )
texture = ExtResource( 2 )

[node name="hero_center_spot" type="Sprite" parent="player/blue_board"]
position = Vector2( -95.1113, -547.171 )
rotation = 1.5708
scale = Vector2( 0.391278, 0.648969 )
texture = ExtResource( 2 )

[node name="hero_right_spot" type="Sprite" parent="player/blue_board"]
position = Vector2( 1171.27, -547.17 )
rotation = 1.5708
scale = Vector2( 0.391278, 0.648969 )
texture = ExtResource( 2 )

[node name="spell_left_spot" type="Sprite" parent="player/blue_board"]
position = Vector2( -1390.78, 506.256 )
rotation = 1.5708
scale = Vector2( 0.391278, 0.648969 )
texture = ExtResource( 2 )

[node name="spell_center_spot" type="Sprite" parent="player/blue_board"]
position = Vector2( -95.1113, 513.193 )
rotation = 1.5708
scale = Vector2( 0.391278, 0.648969 )
texture = ExtResource( 2 )

[node name="spell_right_spot" type="Sprite" parent="player/blue_board"]
position = Vector2( 1171.27, 513.194 )
rotation = 1.5708
scale = Vector2( 0.391278, 0.648969 )
texture = ExtResource( 2 )

[node name="hand" type="Sprite" parent="player"]
position = Vector2( 981.516, 989.757 )
scale = Vector2( 0.169598, 0.0893815 )
z_as_relative = false
texture = ExtResource( 7 )

[node name="card1_spot" type="Sprite" parent="player/hand"]
position = Vector2( -3225.24, 34.6533 )
rotation = 1.5708
scale = Vector2( 0.779216, 0.428568 )
texture = ExtResource( 2 )

[node name="card2_spot" type="Sprite" parent="player/hand"]
position = Vector2( -2523.01, 25.0859 )
rotation = 1.5708
scale = Vector2( 0.779216, 0.428568 )
texture = ExtResource( 2 )

[node name="card3_spot" type="Sprite" parent="player/hand"]
position = Vector2( -1819.93, 24.5205 )
rotation = 1.5708
scale = Vector2( 0.779216, 0.428568 )
texture = ExtResource( 2 )

[node name="card4_spot" type="Sprite" parent="player/hand"]
position = Vector2( -1109.48, 36.4434 )
rotation = 1.5708
scale = Vector2( 0.779216, 0.428568 )
texture = ExtResource( 2 )

[node name="card5_spot" type="Sprite" parent="player/hand"]
position = Vector2( -406.395, 35.8701 )
rotation = 1.5708
scale = Vector2( 0.779216, 0.428568 )
texture = ExtResource( 2 )

[node name="card6_spot" type="Sprite" parent="player/hand"]
position = Vector2( 285.164, 43.1689 )
rotation = 1.5708
scale = Vector2( 0.779216, 0.428568 )
texture = ExtResource( 2 )

[node name="card7_spot" type="Sprite" parent="player/hand"]
position = Vector2( 987.395, 33.6045 )
rotation = 1.5708
scale = Vector2( 0.779216, 0.428568 )
texture = ExtResource( 2 )

[node name="card8_spot" type="Sprite" parent="player/hand"]
position = Vector2( 1690.48, 33.0381 )
rotation = 1.5708
scale = Vector2( 0.779216, 0.428568 )
texture = ExtResource( 2 )

[node name="card9_spot" type="Sprite" parent="player/hand"]
position = Vector2( 2400.93, 44.959 )
rotation = 1.5708
scale = Vector2( 0.779216, 0.428568 )
texture = ExtResource( 2 )

[node name="card10_spot" type="Sprite" parent="player/hand"]
position = Vector2( 3104.01, 44.3887 )
rotation = 1.5708
scale = Vector2( 0.779216, 0.428568 )
texture = ExtResource( 2 )

[node name="red_obj" type="Sprite" parent="."]
position = Vector2( 115.615, 788.015 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="border7" type="Sprite" parent="red_obj"]
position = Vector2( 6.42188, -11.707 )
scale = Vector2( 0.232158, 0.242282 )
texture = ExtResource( 2 )

[node name="blue_obj" type="Sprite" parent="."]
position = Vector2( 114.759, 302.771 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="border8" type="Sprite" parent="blue_obj"]
position = Vector2( 8.44629, -8.52734 )
scale = Vector2( 0.232158, 0.242282 )
texture = ExtResource( 2 )

[node name="green_obj" type="Sprite" parent="."]
position = Vector2( 116.553, 539.993 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="border9" type="Sprite" parent="green_obj"]
position = Vector2( 12.2998, -2.54703 )
scale = Vector2( 0.232158, 0.242282 )
texture = ExtResource( 2 )

[node name="left_zoom" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 500, 524 )
scale = Vector2( 0.5, 0.5 )
z_index = 3

[node name="center_zoom" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 1000, 524 )
scale = Vector2( 0.5, 0.5 )
z_index = 3

[node name="right_zoom" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 1500, 524 )
scale = Vector2( 0.5, 0.5 )
z_index = 3

[node name="zoom_timer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="timeout" from="zoom_timer" to="." method="_on_zoom_timer_timeout"]
